<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="40dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/initTripButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="375dp"
        app:cardCornerRadius="20dp"
        android:layout_alignParentBottom="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginHorizontal="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initTrip"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:padding="8dp"
            android:textSize="20dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/lastTrips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="300dp"
        app:cardCornerRadius="20dp"
        android:layout_alignParentBottom="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginHorizontal="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latsTrips"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:padding="8dp"
            android:textSize="20dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/updateUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="225dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        android:layout_alignParentBottom="true"
        android:foreground="?attr/selectableItemBackground">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"/>
            android:background="@drawable/button_border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateUserInfo"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:padding="8dp"
            android:textSize="20dp"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>